--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
