--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "mongodb": "^3.5.3",
     "socket.io": "^2.3.0"
   }
 }
